--- a/Koder/templates/Koder/contact.html
+++ b/Koder/templates/Koder/contact.html
@@ -23,16 +23,17 @@
             position: absolute;
         }
         .button1{
+            position: absolute;
             background-color: transparent;
             color: aliceblue;
             border-radius: 12px;
             border-color: transparent;
             transition-duration: .4s;
             cursor: pointer;
-            font-size: 50px;
+            font-size: 60px;
         }
         .button1:hover {
-          font-size: 52px;
+          font-size: 65px;
           background-color: transparent; /* Green */
           color: rgb(136, 134, 134);
         }
@@ -128,5 +129,6 @@
    <h2 onclick="window.location='http://127.0.0.1:8000/Koder/';" class="h2" style="z-index:9999; left: 28px; top: 40px; color: #f1f1f1; font-size: 15px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Kel Onyewuenyi presents</h1>
     <h1 class="h" style="left: 500px; top: 400px;">Business E-mail: kel.onyewuenyi@gmail.com</h1>
     <h1 class="h" style="left: 500px; top: 500px;">Phone Number: 281-630-6287</h1>
+    <button class="button1" style="top: 700px; left: 900px;">Discord</button>
 </body>
 </html>
