--- a/Koder/templates/Koder/index.html
+++ b/Koder/templates/Koder/index.html
@@ -171,11 +171,14 @@
     <button onclick="window.location='http://127.0.0.1:8000/Koder/contact';" class="button1" style="font-family: fantasy; top: 750px; left: 900px">
         Contact
     </button>
+    <button onclick="window.location='https://github.com/Kel-KO?tab=repositories';" class="button1" style="font-family: fantasy; top: 850px; left: 900px">
+        GitHub
+    </button>
  </div>
     <div class="section1" id="about" style="border: 6px solid; border-radius: 10px; border-color: #7b0000;">
-        <a href="#index">Back to Top</a>
+        <a href="#index" style="font-size: 30px;">Back to Top</a>
         <h2 style="text-align: center; color: #7b0000; font-size: 50px;">About</h2>
-        <p style=" position:absolute; left:200px ;width:75% ;text-align: left; font-size: 30px; font-family: fantasy;">Hey everyone! My name is Kel Onyewuenyi. I'm an aspiring software engineer looking to spread my creativity through code. Welcome to my coding platfor, KODER. Koder is a platform i created from scratch which i'm working to grow into a business that help others be able to express themselves through code. Come along as we grow this together and create something amazing in this world!!</p>
+        <p style=" position:absolute; left:200px ;width:75% ;text-align: left; font-size: 30px; font-family: fantasy;">Hey everyone! My name is Kel Onyewuenyi. I'm an aspiring software engineer looking to spread my creativity through code. Welcome to my coding platfor, KOder. KOder is a platform i created from scratch which i'm working to grow into a business that can allow others to express themselves through code. I'll be using this platform, for the moment, as a portfolio to store my information and app creations. Come along as we grow this together and create something amazing in this world!!</p>
       </div>
 </body>
 </html>
